fixed small bug, two @media queries were misaligned

--- a/public/styles/typography.css
+++ b/public/styles/typography.css
@@ -300,7 +300,7 @@ input[type=text] {
 /* INDEX GALLERY SCALING SECTION */
 
 /* Changing from three columns to two columns */
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1024px) {
     /* Image title text */
     .gallery-image-name {
         font-size: 3.5vw;
